# nixpick

./: Cargo.toml  README.md  flake.nix
.pi/prompts/: nixpick.md
src/: app.rs  cli.rs  generate.rs  main.rs  search.rs  ui.rs
